# solana-democracy

./: .gitignore  Anchor.toml  Cargo.toml  README.md  censor  package-lock.json  package.json  program_pkey
app/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/.next/: build-manifest.json  react-loadable-manifest.json  trace
app/.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
app/.next/server/pages/: _app.js  _document.js  _error.js  index.js  petitions.js
app/.next/static/chunks/: _error.js  node_modules_blocto_sdk_dist_blocto-sdk_umd_js.js  webpack.js  (+11 more)
app/public/: manifest.json  sw.js  sw.js.map
app/src/: petition_idl.json  ubi_idl.json
app/src/components/: AppBar.tsx  ContentContainer.tsx  Footer.tsx  GetISC.tsx  NetworkSwitcher.tsx  Notification.tsx  OSS.tsx  ProgramCard.tsx
app/src/components/ubi/: Mint.tsx  (+5 more)
app/src/contexts/: ContextProvider.tsx
app/src/hooks/: useQueryContext.tsx
app/src/pages/: _app.tsx  _document.tsx  _offline.tsx  index.tsx  mirrors.tsx  ubi.tsx
app/src/stores/: useActiveRegionsStore.tsx  useFundraiserStore.tsx  useNotificationStore.tsx  useProposalStore.tsx  useSingleProposalStore.tsx  useUBIInfoStore.tsx
app/src/styles/: globals.css
app/src/types/: types.ts
app/src/utils/: fundraisers.ts  index.ts  petitions.ts  ubi.ts  ubi.tsx
app/src/views/: index.tsx
lib/accounts/elections/: Cargo.toml
lib/shared/: Cargo.toml
lib/shared/src/: lib.rs
lib/trust-accounts/: Cargo.toml
lib/trust-accounts/src/: lib.rs
programs/census/: Cargo.toml
programs/census/src/: lib.rs
programs/elections/: Cargo.toml
programs/elections/src/: lib.rs
programs/referenda/: Cargo.toml
programs/referenda/src/: lib.rs
programs/sampling/: Cargo.toml
programs/sampling/src/: lib.rs
programs/solana-fundraisers/: Cargo.toml
programs/solana-fundraisers/src/: lib.rs
programs/solana-petition/: Cargo.toml
programs/solana-petition/src/: lib.rs
programs/solana-ubi/: Cargo.toml
programs/solana-ubi/src/: lib.rs
programs/trust-networks/: Cargo.toml
programs/trust-networks/src/: lib.rs
tests/: solana-petition.ts  solana-ubi.ts
(+119 files in other folders)
