[package]
name = "solana-ubi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ubi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-derive-accounts = {version = "0.28.0" }
solana-gateway = {version = "0.4.0", features = ["no-entrypoint"]}