[package]
name = "trust-networks"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trust_networks"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
trust-accounts = {path = "../../lib/accounts/trust-networks" }
shared = {path = "../../lib/shared"}